--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,22 @@ ignore = [
 "tf2onnx/version.py" = ["E", "F", "W", "I"]
 "tf2onnx/tflite*" = ["E", "F", "W", "I"]
 # Probe import used only to test availability of the optional package
-"tests/common.py" = ["F401"]
+"tests/common.py" = ["F401", "I001"]
 # Bare except is intentional (tf.contrib may not exist in TF 2.x)
 "tests/run_pretrained_models.py" = ["E722"]
 # Test files: wildcard imports from common, lambda test helpers, bare excepts, etc.
-"tests/test_*.py" = ["E701", "E722", "E731", "F403", "F405", "F811"]
+"tests/test_*.py" = ["E701", "E722", "E731", "F403", "F405", "F811", "I001"]
+# Legacy source files: patterns widespread in existing code, not worth fixing en masse
+"tf2onnx/*.py" = ["E402", "E701", "E722", "E731", "F401", "I001"]
 # Wildcard import from rewriter is intentional; all exported names are in __all__
 "tf2onnx/tfonnx.py" = ["F403", "F405"]
+# __init__.py re-exports: imports are for side-effects / re-export, not direct use
+"tf2onnx/**/__init__.py" = ["F401"]
+# Undefined names are conditional imports or skia-opt codepaths
+"tf2onnx/onnx_opset/nn.py" = ["F821"]
+"tf2onnx/optimizer/einsum_optimizer.py" = ["F821"]
+# Single-line guards are idiomatic in these files
+"tf2onnx/onnx_opset/math.py" = ["E701"]
+"tf2onnx/rewriter/gemm_rewriter.py" = ["E701"]
+# Tools: legacy scripts, bare excepts and redefined logging are intentional
+"tools/*.py" = ["E722", "F811"]
